tests/paczka1/small_fuzzy/43042256.err
Error in line 4: fRRRuGJ4p8I S533 12,9
Error in line 7: fRRRuGJ4p8I S314 78,6
Error in line 5: DBU2u S314 30,2
Error in line 15: DBU2u S573 8,30
